Rock_Paper_Scissors

--- a/PYTHON/Lab PreworkReview/Rock_Paper_Scissors-checkpoint.ipynb
+++ b/PYTHON/Lab PreworkReview/Rock_Paper_Scissors-checkpoint.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,14 @@
     "        if n_rounds % 2 > 0:\n",
     "            return(n_rounds)\n",
     "        else:\n",
-    "            print(\"Please give me an odd number\")\n",
-    "            return \n",
+    "            return \"Please give me an odd number\"\n",
     "    else:\n",
-    "        print(\"Please give me an integer number\")\n",
-    "        return "
+    "        return \"Please give me an integer number\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -126,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpu_score=0\n",
-    "player_score=0"
+    "cpu=0\n",
+    "player=0"
    ]
   },
   {
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +162,7 @@
        "'rock'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,13 +189,12 @@
     "     if x == \"rock\" or x == \"paper\" or x == \"scissors\":\n",
     "        return(x)\n",
     "     else:\n",
-    "        print(\"Please enter rock or paper or scissors\")\n",
-    "        return "
+    "        return \" Please enter rock or paper or scissors\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +203,7 @@
        "'rock'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,27 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#P=input()\n",
-    "#C=randomnum()\n",
-    "#winner = []\n",
     "def win(C,P):\n",
+    "    winner = []\n",
     "    if C==\"rock\" and P==\"scissors\" or C==\"paper\" and P==\"rock\" or C==\"scissors\" and P==\"paper\":\n",
-    "        winner=1\n",
+    "        winner.append('1')\n",
     "    elif C==\"scissors\" and P==\"rock\"or C==\"rock\" and P==\"paper\" or C==\"paper\" and P==\"scissors\":\n",
-    "        winner = 2\n",
-    "    elif C==P: \n",
-    "        winner = 0\n",
-    "    else: winner = -1\n",
-    "    return winner\n"
+    "        winner.append('2')\n",
+    "    else: winner.append('0')\n",
+    "    \n",
+    "    return winner\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -254,13 +249,13 @@
        "['2']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "win(\"rock\",\"paper\")"
+    "win(\"scissors\",\"rock\")"
    ]
   },
   {
@@ -273,19 +268,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['0']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(winner)\n"
+    "c = 0\n",
+    "    for i in range(1,len(winner)):\n",
+    "        previous = winner[i-1]\n",
+    "        if winner[i]==previous:\n",
+    "            c+=1\n",
+    "        else: c=0\n",
+    "        if c==2:\n",
+    "            break\n",
+    "        if winner[i]=='1':winner_name=\"Computer\"\n",
+    "        elif winner[i]=='2': winner_name='Player'  \n",
+    "            "
    ]
   },
   {
@@ -301,71 +298,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fica\n",
-      "Computer played rock\n",
-      "Wrong input\n",
-      "Player: 0 \n",
-      "CPU: 0\n",
-      "rock\n",
-      "Computer played scissors\n",
-      "This round was won by player\n",
-      "Player: 1 \n",
-      "CPU: 0\n",
-      "rock\n",
-      "Computer played rock\n",
-      "Tie\n",
-      "Player: 1 \n",
-      "CPU: 0\n",
-      "rock\n",
-      "Computer played scissors\n",
-      "This round was won by player\n",
-      "Player: 2 \n",
-      "CPU: 0\n",
-      "End of game. Player won.\n"
-     ]
-    }
-   ],
-   "source": [
-    "cpu_score = 0\n",
-    "player_score = 0\n",
-    "\n",
-    "while cpu_score < rounds_to_win and player_score < rounds_to_win:\n",
-    "    P=input()\n",
-    "    C=randomnum()\n",
-    "    print('Computer played {0}'.format(C))\n",
-    "    winner = win(C,P)\n",
-    "    if winner==2:\n",
-    "        print(\"This round was won by player\")\n",
-    "        player_score += 1\n",
-    "    elif winner==1: \n",
-    "        print('This round was won by computer')\n",
-    "        cpu_score += 1\n",
-    "    elif winner==0:\n",
-    "        print('Tie')\n",
-    "    elif winner==-1: \n",
-    "        print(\"Wrong input\")\n",
-    "    print(\"Player: {0} \\nCPU: {1}\".format(player_score, cpu_score))\n",
-    "\n",
-    "if player_score == rounds_to_win:\n",
-    "    print(\"End of game. Player won.\")\n",
-    "if cpu_score == rounds_to_win:\n",
-    "    print(\"End of game. Computer won.\")   \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "print(winner_name)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
